--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 (next release) on (date of next release)
+09.05.00 VZ: version number bumped to 0.60a
 03.05.00 KB: Started work on a small calendar plugin
-02.05.00 KB: SendMessageCC now only uses the profile at construction time, not later
 02.05.00 VZ: folder renaming implemented
 02.05.00 VZ: the log window can be shown/hidden, closing it hides it permanently
 01.05.00 VZ: initial wizard small fixes: don't create servers not specified
