--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+12.05.00 VZ: added "compose with template" and "edit templates"
 09.05.00 VZ: implemented reply/forward with template menu commands
 09.05.00 VZ: version number bumped to 0.60a
 03.05.00 KB: Started work on a small calendar plugin
